--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,20 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - danielmlow
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - danielmlow/construct-tracker
+  - danielmlow/tutorials
+  - nipype/pydra-ml
+  - ReproNim/reproschema-library
+  - danielmlow/reddit
+  - danielmlow/review
+  - danielmlow/vfp
+  - danielmlow/rallypoint_suicide_detection
+  - danielmlow/covid19_argentina
+  - danielmlow/covid19_risk
+  - danielmlow/playbook_comments
+  - danielmlow/effective_altruism_chatbot
+
+  
