--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,25 +27,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2'
+          ruby-version: "3.2"
           bundler-cache: true
-      
+
       - name: Install ImageMagick
         run: |
           sudo apt-get update
           sudo apt-get install -y imagemagick
-      
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
-      
+
       - name: Build with Jekyll
         run: |
           bundle exec jekyll build --destination ./_site
-      
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
